# FP-QGPU

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  scratch.py
docs/: benchmarking.rst  conf.py  cuda_gates_step_by_step.md  diataxis.rst  index.rst
docs/jupyter_execute/jupyter_execute/jupyter_execute/notebooks/: simulator_comparison.ipynb
docs/notebooks/: simulator_comparison.ipynb
playground/: matrix_reshape.py  test.py  test_jupyter.ipynb
quantum_circuite/: ghz_circuite.py
src/fp_qgpu/: __init__.py  circuits.py  gatter_operationen.py  gatter_operationen_cuda.py  gatter_operationen_numba.py  pauli_matricies.py  simulator.py  simulator_mock.py
testing/: benchmark_aer_vs_own.py  compare_u_only_statevectors.py  test_benchmark_statevector.py  test_cuda_statevectors.py  test_gatter_operationen_numba.py  test_numba_gates_vs_qiskit.py  test_simulator.py  test_u_only_statevectors.py
